# hermes-pet-refactor

./: .gitignore  CHANGELOG_LOCAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATE.md  CUSTOM_PETS.md  INSTALL_REHEARSAL.md  OPERATOR_GUIDE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  custom_pet.yml  feature_request.yml
docs/: contributor-ideas.md  custom-pet-contributions.md  hermes-plugin-embed.md  macos-deployment.md  packaging-decision-notes.md  platform-support.md
docs/fixtures/custom-pets/minimal-spark/: README.md  custom-pet.json
docs/templates/custom-pets/basic/: README.md  custom-pet.json
scripts/: import-hatch-pet-run.py  package-custom-pet.py  smoke-github-install.sh  smoke-hermes-pet.sh  smoke-renderer.js  validate-custom-pet.py  validate-sprite-manifest.py  verify-live-overlay.sh  verify-package-artifacts.py  verify-packaged-overlay.sh
shell-helpers/: hermes-pet.bash
src/hermes_pet/: achievements.py  bridge.py  cli.py  custom_pets.py  dashboard.py  engine.py  event_log.py  events.py  jobs.py  memory.py  prefs.py  update.py  voice.py
src/hermes_pet/dashboard/: app.css  app.js  index.html
src/hermes_pet/hermes_plugin/hermes-pet/: __init__.py  plugin.yaml
src/hermes_pet/overlay/: package-lock.json  package.json
src/hermes_pet/overlay/assets/: manifest.json
src/hermes_pet/overlay/scripts/: launch-windows-overlay.ps1
src/hermes_pet/overlay/src/: companion-lines.js  companion-narrative.js  companion-packs.js  companion-rules.js  main.js  main.windows.js  preload.js  renderer.css  renderer.html  renderer.js
tests/: test_cli_help.py  test_custom_pets.py  test_events.py  test_hermes_plugin.py  test_memory.py  test_operator_trust_core.py  test_overlay_checkout_runtime.py  test_prefs_jobs.py  test_update_command.py  test_v030_dashboard_preview.py
