[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-pet"
version = "1.0.0"
description = "Tamagotchi-style desktop coding companion — adopt a virtual pet that levels up as you code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "desktop-companion",
  "cli",
  "electron",
  "overlay",
  "macos",
  "wsl",
  "windows",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "websockets>=13.0",
]

[project.optional-dependencies]
# Python-side dev tooling. The Electron overlay is managed in src/hermes_pet/overlay/package.json.
dev = [
  "pytest",
]

[project.scripts]
hermes-pet = "hermes_pet.cli:main"
hermes-pet-bridge = "hermes_pet.bridge:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["hermes_pet*"]
namespaces = true

[tool.setuptools.package-data]
hermes_pet = [
  "overlay/package.json",
  "overlay/package-lock.json",
  "overlay/src/*.js",
  "overlay/src/*.html",
  "overlay/src/*.css",
  "overlay/assets/manifest.json",
  "overlay/assets/sprites/**/*",
  "overlay/scripts/*.ps1",
  "hermes_plugin/hermes-pet/__init__.py",
  "hermes_plugin/hermes-pet/plugin.yaml",
  "dashboard/*.html",
  "dashboard/*.css",
  "dashboard/*.js",
]
